--- a/src/classes/CadenceSTest.cls
+++ b/src/classes/CadenceSTest.cls
@@ -53,9 +53,11 @@ public class CadenceSTest {
     
     @isTest
     public static void getFieldsWithLabelsTest() {
- 		List<Criterion> fieldsWithLabels;
+ 		List<CriterionWrapper> fieldsWithLabels;
+        List<String> objectList = new List<String>();
+        objectList =new List<String>{CadenceConstants.LEAD_OBJECT_NAME,CadenceConstants.DB_OBJECT_NAME };
     	Test.startTest();
-		fieldsWithLabels = CadenceService.getFieldsWithLabels('Account');
+		fieldsWithLabels = CadenceService.getFieldsWithLabels(objectList);
     	Test.stopTest();
     	
     	System.assertEquals(true, fieldsWithLabels!=null);
